[project]
name = "dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium[atari,torch]>=1.3.0",
    "opencv-python>=3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.13.1",
    "torch>=2.12.1",
    "wandb>=0.27.1",
]

[tool.ruff]
line-length = 140
